# frappe-gql-adaptor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  release.yaml
frappe_gql_adaptor/: __init__.py  __init__.pyi  api.py  api.pyi  resolvers.py  resolvers.pyi  schema.py  schema.pyi
