[tool.poetry]
name = "frappe_gql_adaptor"
version = "0.1.0"
description = "GraphQL API Layer for Frappe Framework"
license = "MIT"
authors = ["AgriTheory <support@agritheory.dev>"]
readme = "README.md"
homepage = "https://github.com/agritheory/frappe-gql-adaptor"
repository = "https://github.com/agritheory/frappe-gql-adaptor"
packages = [{ include = "frappe_gql_adaptor", format = "wheel" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
graphql-server = "^3.0.0b7"
redis-dict = "^2.5.0"

[tool.poetry.group.dev.dependencies]
frappe = {git = "https://github.com/frappe/frappe.git", branch = "version-15", optional = true}

[tool.codespell]
skip = "CHANGELOG.md,poetry.lock"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
